--- a/companyDetail.html
+++ b/companyDetail.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1, user-scalable=no">
-<title>求购信息列表</title>
+<title>企业介绍</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <link rel="stylesheet" type="text/css" href="/statics/css/yumReset.css" />
@@ -15,7 +15,7 @@
 <body>
 <header class="header">
 	<a href="javascript:history.back();"><i class="icon-arrow-back"></i></a>
-	<h2>求购详细信息</h2>
+	<h2>企业介绍</h2>
 	<a href="index.php"><i class="icon-home"></i></a>
 </header>
 <ul class="companyDetail">
