--- a/companyAdd.html
+++ b/companyAdd.html
@@ -7,16 +7,15 @@
 <title>求购信息列表</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
-<link rel="stylesheet" type="text/css" href="/statics/css/yumReset.css" />
-<link rel="stylesheet" type="text/css" href="/statics/css/yumPage.css" />
+<link rel="stylesheet" type="text/css" href="/statics/css/yumleeM.css" />
 <link rel="stylesheet" type="text/css" href="/com/icomoon/style.css" />
 <link rel="stylesheet" type="text/css" href="/com/swiper/swiper.min.css" />
 </head>
 <body>
 <header class="header">
-	<a href="javascript:history.back();"><i class="icon-arrow-back"></i></a>
-	<h2>求购详细信息</h2>
-	<a href="index.php"><i class="icon-home"></i></a>
+	<div><a href="javascript:history.back();"><i class="icon-arrow-back"></i></a></div>
+	<h1>求购详细信息</h1>
+	<div><a href="index.php"><i class="icon-home"></i></a></div>
 </header>
 <form action="" method ="post" class="style-form">
 	<ul class="companyDetail">
